# tinyboot

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  book.toml
.cargo/: config.toml
bootloader/: Cargo.toml  build.rs  builder.rs  memory.x
bootloader/.cargo/: config.toml
bootloader/examples/boot/: Cargo.toml
bootloader/memory/: ch32v003f4u6.x
bootloader/src/: lib.rs  main.rs
bootloader/src/hal/: abi.rs  flash.rs  mod.rs  registry.rs  uart.rs
ch32/: Cargo.toml  README.md  build.rs  tb-run-mode.x
ch32/app/: Cargo.toml  README.md
ch32/app/src/: lib.rs
ch32/boot/: Cargo.toml  README.md  build.rs  link.x
ch32/boot/src/: lib.rs
ch32/boot/src/platform/: boot_ctl.rs  boot_state.rs  mod.rs  storage.rs
ch32/boot/src/rt/: mod.rs  v3.S
ch32/hal/: Cargo.toml  README.md  build.rs  tb-boot-req.x  tb-user-flash.x
ch32/hal/src/: boot_request.rs  iwdg.rs  lib.rs
ch32/hal/src/afio/: mod.rs  v0.rs  v3.rs
ch32/hal/src/flash/: mod.rs  v0.rs  v1.rs
ch32/hal/src/gpio/: mod.rs  v0.rs  v3.rs
ch32/hal/src/pfic/: mod.rs  rv2.rs  rv3.rs
ch32/hal/src/rcc/: mod.rs  v0.rs  v1.rs
ch32/hal/src/usart/: mod.rs  usart_common.rs
ch32/rt/: Cargo.toml  README.md  link.x
ch32/rt/src/: lib.rs  start.S
ch32/src/: app.rs  boot.rs  lib.rs
ch32/src/hal/: iwdg.rs  mod.rs
ch32/src/hal/flash/: mod.rs  v0.rs  v1.rs
ch32/src/hal/gpio/: v0.rs  v3.rs
ch32/src/hal/pfic/: rv2.rs  rv3.rs
ch32/src/hal/rcc/: v0.rs  v1.rs
ch32/src/hal/usart/: usart_common.rs
ch32/src/platform/: boot_ctl.rs  boot_meta_store.rs  mod.rs  storage.rs
ch32/src/platform/boot_ctl/: mod.rs
ch32/src/platform/boot_ctl/boot_src/: gpio.rs  mod.rs  mode.rs
cli/: Cargo.toml  README.md
cli/src/: client.rs  main.rs  transport.rs
examples/ch32/app/: Cargo.toml  build.rs
examples/ch32/app/.cargo/: config.toml
examples/ch32/app/src/: main.rs  transport.rs
examples/ch32/boot/: Cargo.toml  build.rs  riscv32ec-unknown-none-elf.json
examples/ch32/boot/src/: main.rs
examples/ch32/system-flash/app/: Cargo.toml  build.rs
examples/ch32/v003/app/: Cargo.toml  build.rs
examples/ch32/v003/boot/: Cargo.toml  build.rs
examples/ch32/v00x/app/: Cargo.toml  build.rs
examples/ch32/v103/: Cargo.toml
examples/ch32/v103/.cargo/: config.toml
examples/ch32/v103/app/: Cargo.toml  build.rs
examples/ch32/v103/boot/: Cargo.toml  build.rs
lib/: Cargo.toml
lib/core/: Cargo.toml  README.md  build.rs  tb-app.x  tb-boot.x
lib/core/src/: app.rs  core.rs  lib.rs  platform.rs  protocol.rs  ringbuf.rs  traits.rs
lib/core/src/traits/: app.rs  mod.rs
lib/core/tests/: state_transitions.rs
lib/protocol/: Cargo.toml  README.md
lib/protocol/src/: crc.rs  frame.rs  lib.rs  sync.rs
smol-boot-ch32/: Cargo.toml  build.rs
smol-boot-ch32/examples/bootloader/: Cargo.toml
smol-boot-ch32/examples/bootloader/.cargo/: config.toml
smol-boot-ch32/examples/bootloader/src/: main.rs
smol-boot-ch32/src/: lib.rs
smol-boot-ch32/src/hal/: abi.rs  common.rs  mod.rs  registry.rs
tiny-boot/: Cargo.toml
tiny-boot-ch32/: Cargo.toml  build.rs  link.x  tiny-boot-ch32.x
tiny-boot-ch32/examples/app-a/: Cargo.toml
tiny-boot-ch32/examples/app-a/src/: main.rs
tiny-boot-ch32/examples/app-b/: Cargo.toml
tiny-boot-ch32/examples/app-b/.cargo/: config.toml
tiny-boot-ch32/examples/app-b/src/: main.rs
tiny-boot-ch32/examples/bootloader/: Cargo.toml
tiny-boot-ch32/examples/bootloader/.cargo/: config.toml
tiny-boot-ch32/examples/bootloader/src/: main.rs
tiny-boot-ch32/src/: lib.rs
tiny-boot-ch32/src/hal/: abi.rs  common.rs  mod.rs  registry.rs
tiny-boot-ch32/src/hal/flash/: mod.rs  v0.rs
tiny-boot-ch32/src/hal/transport/: mod.rs  rs485.rs
tiny-boot-ch32/src/platform/: boot_ctl.rs  boot_state.rs  mod.rs  storage.rs
tiny-boot/src/: boot.rs  hal.rs  lib.rs  traits.rs
tinyboot/: Cargo.toml  tb-app.x  tb-boot.x
tinyboot-ch32/: Cargo.toml  build.rs  link.x
tinyboot-ch32-app/: Cargo.toml  README.md  tinyboot.x
tinyboot-ch32-app/src/: lib.rs
tinyboot-ch32-boot/: Cargo.toml  README.md  build.rs
tinyboot-ch32-boot/src/: lib.rs
tinyboot-ch32-boot/src/platform/: boot_ctl.rs  boot_state.rs  mod.rs  storage.rs
tinyboot-ch32-boot/src/rt/: mod.rs  v2.S  v2_full.S  v3.S  v3_full.S
tinyboot-ch32-hal/: Cargo.toml  README.md  build.rs  tb-boot-req.x  tb-user-flash.x
tinyboot-ch32-hal/src/: boot_request.rs  lib.rs
tinyboot-ch32-hal/src/flash/: mod.rs  v0.rs  v1.rs
tinyboot-ch32-hal/src/gpio/: mod.rs  v3.rs
tinyboot-ch32-hal/src/pfic/: rv2.rs  rv3.rs
tinyboot-ch32-hal/src/rcc/: v0.rs
tinyboot-ch32-hal/src/usart/: usart_common.rs
tinyboot-ch32/examples/app-a/: Cargo.toml
tinyboot-ch32/examples/app-a/src/: main.rs
tinyboot-ch32/examples/app-b/: Cargo.toml
tinyboot-ch32/examples/app-b/src/: main.rs
tinyboot-ch32/examples/bootloader/: Cargo.toml  build.rs  memory.x
tinyboot-ch32/examples/bootloader/src/: main.rs
tinyboot-ch32/examples/system-flash/: Cargo.toml  README.md
tinyboot-ch32/examples/system-flash/app/: Cargo.toml
tinyboot-ch32/examples/system-flash/boot/: Cargo.toml  build.rs  memory.x
tinyboot-ch32/examples/user-flash/: README.md
tinyboot-ch32/examples/user-flash/app/: Cargo.toml  build.rs  memory.x
tinyboot-ch32/examples/user-flash/boot/: Cargo.toml  memory.x
tinyboot-ch32/src/: app.rs  lib.rs
tinyboot-ch32/src/boot/: mod.rs
tinyboot-ch32/src/boot/platform/: boot_ctl.rs  boot_state.rs  mod.rs  storage.rs
tinyboot-ch32/src/boot/rt/: mod.rs
tinyboot-ch32/src/hal/: mod.rs
tinyboot-ch32/src/hal/afio/: mod.rs  v0.rs
tinyboot-ch32/src/hal/flash/: v0.rs
tinyboot-ch32/src/hal/gpio/: v0.rs
tinyboot-ch32/src/hal/pfic/: rv2.rs
tinyboot-ch32/src/hal/rcc/: mod.rs  v0.rs
tinyboot-ch32/src/hal/usart/: usart_common.rs
tinyboot-cli/: Cargo.toml  README.md
tinyboot-cli/src/: client.rs  flash.rs  main.rs
tinyboot-protocol/: Cargo.toml  README.md
tinyboot-protocol/src/: frame.rs  lib.rs  sync.rs
tinyboot/src/: core.rs  lib.rs  protocol.rs  traits.rs
tinyboot/src/traits/: boot.rs  mod.rs
tinyboot/tests/: state_transitions.rs
(+87 files in other folders)
