[workspace]
members = [
    "bootloader",
    "core",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
repository = "https://github.com/OpenServoCore/ch32-iap-bootloader"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
defmt = { version = "1.0" }
defmt-rtt = { version = "1.1" }

[profile.dev]
opt-level = "z"
lto = true
codegen-units = 1
debug = 1

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
