[workspace]
members = [
    "tinyboot",
    "tinyboot-ch32-hal",
    "tinyboot-ch32-boot",
    "tinyboot-ch32-app",
    "tinyboot-protocol",
    "tinyboot-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
repository = "https://github.com/OpenServoCore/tinyboot"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
defmt = { version = "1.0" }
defmt-rtt = { version = "1.1" }
embedded-hal = "1"
embedded-io = "0.7"
embedded-io-async = "0.7"
embedded-storage = "0.3"

[profile.dev]
opt-level = "z"
lto = true
codegen-units = 1
debug = 2

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
