[package]
name = "ch32-iap-bootloader"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ch32-metapac = { version = "0.0.6", default-features = false, features = ["pac", "rt", "metadata"] }
qingke-rt = "0.6.1"
qingke = { version = "0.6.1", features = ["critical-section-impl"] }
panic-halt = "1.0"

defmt = { workspace = true, optional = true }
defmt-rtt = { workspace = true, optional = true }

ch32-iap-core = { path = "../core" }

[build-dependencies]
ch32-metapac = { version = "0.0.6", default-features = false, features = ["pac", "rt", "metadata"] }

[features]
default = ["ch32v003f4p6"]

# supported chip variants
ch32v003f4p6 = ["ch32-metapac/ch32v003f4p6"]

# debug features
log = ["dep:defmt", "dep:defmt-rtt"]

# boot behavior
require-app = ["ch32-iap-core/require-app"]
