[package]
name = "tinyboot-ch32"
description = "tinyboot ch32 implementation"
version = "0.4.1"
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["bootloader", "embedded", "ch32", "risc-v", "no-std"]
categories = ["embedded", "no-std", "hardware-support"]
links = "tinyboot-ch32"
readme = "README.md"

[dependencies]
tinyboot-core = { workspace = true, default-features = false }
ch32-metapac = { git = "https://github.com/ch32-rs/ch32-metapac", default-features = false, features = ["pac"] }
embedded-hal = { workspace = true }
embedded-io = { workspace = true }
embedded-storage = { workspace = true }
critical-section = "1.2"

[build-dependencies]
ch32-metapac = { git = "https://github.com/ch32-rs/ch32-metapac", default-features = false, features = ["metadata"] }

[features]
default = ["ch32v003f4p6"]

# supported chip variants
ch32v003f4p6 = ["ch32-metapac/ch32v003f4p6"]
ch32v003a4m6 = ["ch32-metapac/ch32v003a4m6"]
ch32v003f4u6 = ["ch32-metapac/ch32v003f4u6"]
ch32v003j4m6 = ["ch32-metapac/ch32v003j4m6"]
ch32v002x4x6 = ["ch32-metapac/ch32v002x4x6"]
ch32v004x6x1 = ["ch32-metapac/ch32v004x6x1"]
ch32v005x6x6 = ["ch32-metapac/ch32v005x6x6"]
ch32v006x8x6 = ["ch32-metapac/ch32v006x8x6"]
ch32v007x8x6 = ["ch32-metapac/ch32v007x8x6"]
ch32v103c6t6 = ["ch32-metapac/ch32v103c6t6"]
ch32v103c8t6 = ["ch32-metapac/ch32v103c8t6"]
ch32v103c8u6 = ["ch32-metapac/ch32v103c8u6"]
ch32v103r8t6 = ["ch32-metapac/ch32v103r8t6"]

system-flash = []

[workspace]
members = [".", "rt"]
default-members = [".", "rt"]
resolver = "2"

[workspace.package]
edition = "2024"
repository = "https://github.com/OpenServoCore/tinyboot"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tinyboot-core = { version = "0.4.0", path = "../lib/core", default-features = false }
tinyboot-ch32 = { version = "0.4.1", path = ".", default-features = false }
embedded-hal = "1"
embedded-io = "0.7"
embedded-storage = "0.3"

[profile.dev]
opt-level = "z"
lto = true
codegen-units = 1
debug = 2

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
