[package]
name = "tiny-boot-ch32"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ch32-metapac = { version = "0.0.6", default-features = false, features = ["pac"] }
embedded-hal = { workspace = true }
embedded-io = { workspace = true }
embedded-storage = { workspace = true }

critical-section = "1.2"
defmt = { version = "1.0", optional = true }
tiny-boot = { path = "../tiny-boot" }

[build-dependencies]
ch32-metapac = { version = "0.0.6", default-features = false, features = ["metadata"] }

[features]
default = ["memory-x"]

# supported chip variants
ch32v003f4p6 = ["ch32-metapac/ch32v003f4p6"]

# auto-generate memory.x from ch32-metapac metadata.
# disable to provide your own memory.x.
# NOTE: do NOT enable ch32-metapac/memory-x — this crate generates its own
# memory.x that partitions flash into boot/app regions.
memory-x = []

# logging
defmt = ["dep:defmt", "tiny-boot/defmt"]

# Build as bootloader binary (includes runtime assembly + Bootloader struct + link.x)
bootloader = []

# Build app-side boot client (includes BootClient impl + convenience functions)
app = []
