[package]
name = "tinyboot-ch32-app"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tinyboot-ch32-hal = { path = "../tinyboot-ch32-hal", default-features = false }
tinyboot = { path = "../tinyboot", default-features = false }
critical-section = "1.2"

[features]
default = ["ch32v003f4p6"]
ch32v003f4p6 = ["tinyboot-ch32-hal/ch32v003f4p6"]
system-flash = ["tinyboot-ch32-hal/system-flash"]
trial-boot = []
