[package]
name = "tinyboot-ch32-app"
description = "App-side library for tinyboot on CH32 microcontrollers"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["bootloader", "embedded", "ch32", "risc-v", "no-std"]
categories = ["embedded", "no-std", "hardware-support"]
readme = "README.md"

[dependencies]
tinyboot-ch32-hal = { version = "0.1.0", path = "../tinyboot-ch32-hal", default-features = false }
tinyboot = { version = "0.1.0", path = "../tinyboot", default-features = false }
tinyboot-protocol = { version = "0.1.0", path = "../tinyboot-protocol" }
embedded-io = { workspace = true }
embedded-io-async = { workspace = true }
critical-section = "1.2"
defmt = { workspace = true, optional = true }

[features]
default = ["ch32v003f4p6"]
ch32v003f4p6 = ["tinyboot-ch32-hal/ch32v003f4p6"]
system-flash = ["tinyboot-ch32-hal/system-flash"]
defmt = ["dep:defmt"]
