[package]
name = "tinyboot-ch32-boot"
description = "Bootloader library for tinyboot on CH32 microcontrollers"
version = "0.2.1"
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["bootloader", "embedded", "ch32", "risc-v", "no-std"]
categories = ["embedded", "no-std", "hardware-support"]
readme = "README.md"

[dependencies]
tinyboot-ch32-hal = { version = "0.2.1", path = "../tinyboot-ch32-hal", default-features = false }
tinyboot = { version = "0.2.1", path = "../tinyboot", default-features = false }
tinyboot-macros = { workspace = true }
tinyboot-protocol = { version = "0.2.1", path = "../tinyboot-protocol" }
critical-section = "1.2"
defmt = { workspace = true, optional = true }
embedded-io = { workspace = true }
embedded-storage = { workspace = true }

[features]
ch32v003f4p6 = ["tinyboot-ch32-hal/ch32v003f4p6"]
ch32v003a4m6 = ["tinyboot-ch32-hal/ch32v003a4m6"]
ch32v003f4u6 = ["tinyboot-ch32-hal/ch32v003f4u6"]
ch32v003j4m6 = ["tinyboot-ch32-hal/ch32v003j4m6"]
rt = []
system-flash = ["tinyboot-ch32-hal/system-flash"]
defmt = ["dep:defmt", "tinyboot/defmt", "tinyboot-ch32-hal/defmt", "tinyboot-macros/defmt"]
