[package]
name = "tinyboot-ch32-hal"
description = "Hardware abstraction layer for tinyboot on CH32 microcontrollers"
version = "0.2.1"
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["bootloader", "embedded", "ch32", "risc-v", "no-std"]
categories = ["embedded", "no-std", "hardware-support"]
readme = "README.md"
links = "tinyboot-ch32-hal"

[dependencies]
ch32-metapac = { version = "0.0.6", default-features = false, features = ["pac"] }
embedded-hal = { workspace = true }
embedded-io = { workspace = true }
embedded-storage = { workspace = true }
tinyboot-macros = { workspace = true }

critical-section = "1.2"

defmt = { workspace = true, optional = true }

[build-dependencies]
ch32-metapac = { version = "0.0.6", default-features = false, features = ["metadata"] }

[features]
# supported chip variants
ch32v003f4p6 = ["ch32-metapac/ch32v003f4p6"]
ch32v003a4m6 = ["ch32-metapac/ch32v003a4m6"]
ch32v003f4u6 = ["ch32-metapac/ch32v003f4u6"]
ch32v003j4m6 = ["ch32-metapac/ch32v003j4m6"]

# Bootloader runs from system flash (uses BOOT_MODE register for boot request).
# When disabled, bootloader runs from user flash (uses RAM magic word for boot request).
system-flash = []
defmt = ["dep:defmt", "tinyboot-macros/defmt"]
