[package]
name = "tinyboot-ch32"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ch32-metapac = { version = "0.0.6", default-features = false, features = ["pac"] }
embedded-hal = { workspace = true }
embedded-io = { workspace = true }
embedded-storage = { workspace = true }

critical-section = "1.2"
defmt = { version = "1.0", optional = true }
tinyboot = { path = "../tinyboot" }

[build-dependencies]
ch32-metapac = { version = "0.0.6", default-features = false, features = ["metadata"] }

[features]
default = []

# supported chip variants
ch32v003f4p6 = ["ch32-metapac/ch32v003f4p6"]

# logging
defmt = ["dep:defmt", "tinyboot/defmt"]

# Build as bootloader binary (includes runtime assembly + Bootloader struct + link.x)
bootloader = []

# Build app-side boot client (includes BootClient impl + convenience functions)
app = []
