[package]
name = "tinyboot"
description = "Core bootloader library for tinyboot"
version = "0.2.1"
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["bootloader", "embedded", "firmware", "no-std"]
categories = ["embedded", "no-std"]
readme = "README.md"

[dependencies]
defmt = { workspace = true, optional = true }
embedded-io = { workspace = true }
embedded-io-async = { workspace = true }
embedded-storage = { workspace = true }
tinyboot-macros = { workspace = true }
tinyboot-protocol = { version = "0.2.1", path = "../tinyboot-protocol" }

[features]
defmt = ["dep:defmt", "tinyboot-protocol/defmt", "tinyboot-macros/defmt"]
