[package]
name = "tinyboot-ch32-rt"
description = "Minimal tinyboot runtime for CH32"
version = "0.3.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["bootloader", "embedded", "ch32", "risc-v", "no-std"]
categories = ["embedded", "no-std", "hardware-support"]
readme = "README.md"
