[package]
name = "tinyboot-core"
description = "Core bootloader library for tinyboot"
version = "0.3.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["bootloader", "embedded", "firmware", "no-std"]
categories = ["embedded", "no-std"]
readme = "README.md"

[dependencies]
critical-section = "1.2"
embedded-io = { workspace = true }
embedded-io-async = { workspace = true }
embedded-storage = { workspace = true }
tinyboot-protocol = { workspace = true }

[dev-dependencies]
critical-section = { version = "1.2", features = ["std"] }
