[package]
name = "app"
version = "3.2.1"
edition = "2024"

[dependencies]
tinyboot-ch32-app = { path = "../../../tinyboot-ch32-app", default-features = false }
embedded-io = "0.7"
critical-section = "1"
ch32-hal = { git = "https://github.com/ch32-rs/ch32-hal", default-features = false }
qingke-rt = { version = "0.6", default-features = false }
defmt = { version = "1.0", optional = true }
defmt-rtt = { version = "1.1", optional = true }

[features]
system-flash = ["tinyboot-ch32-app/system-flash"]
user-flash = ["dep:defmt", "dep:defmt-rtt", "tinyboot-ch32-app/defmt"]
ch32v003f4p6 = ["tinyboot-ch32-app/ch32v003f4p6", "ch32-hal/ch32v003f4p6", "ch32-hal/rt", "qingke-rt/v2"]
ch32v003a4m6 = ["tinyboot-ch32-app/ch32v003a4m6", "ch32-hal/ch32v003a4m6", "ch32-hal/rt", "qingke-rt/v2"]
ch32v003f4u6 = ["tinyboot-ch32-app/ch32v003f4u6", "ch32-hal/ch32v003f4u6", "ch32-hal/rt", "qingke-rt/v2"]
ch32v003j4m6 = ["tinyboot-ch32-app/ch32v003j4m6", "ch32-hal/ch32v003j4m6", "ch32-hal/rt", "qingke-rt/v2"]
ch32v103c6t6 = ["tinyboot-ch32-app/ch32v103c6t6", "ch32-hal/ch32v103c6t6", "ch32-hal/rt", "qingke-rt/v3"]
ch32v103c8t6 = ["tinyboot-ch32-app/ch32v103c8t6", "ch32-hal/ch32v103c8t6", "ch32-hal/rt", "qingke-rt/v3"]
ch32v103c8u6 = ["tinyboot-ch32-app/ch32v103c8u6", "ch32-hal/ch32v103c8u6", "ch32-hal/rt", "qingke-rt/v3"]
ch32v103r8t6 = ["tinyboot-ch32-app/ch32v103r8t6", "ch32-hal/ch32v103r8t6", "ch32-hal/rt", "qingke-rt/v3"]

[profile.dev]
opt-level = "z"
lto = true
codegen-units = 1
debug = 2
debug-assertions = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
