[workspace]
members = ["boot", "app"]
resolver = "2"

[workspace.package]
edition = "2024"

[profile.dev]
opt-level = "z"
lto = true
codegen-units = 1
debug = 2
debug-assertions = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[patch.crates-io]
qingke = { git = "https://github.com/OpenServoCore/qingke", branch = "main" }
qingke-rt = { git = "https://github.com/OpenServoCore/qingke", branch = "main" }
