[package]
name = "bootloader"
version = "0.1.0"
edition = "2024"

# Empty workspace table keeps this as a standalone project.
# Remove this if adding to an existing workspace.
[workspace]

[dependencies]
tinyboot-ch32 = { path = "../..", features = ["ch32v003f4p6", "rt"] }
tinyboot = { path = "../../../tinyboot", default-features = false }
panic-halt = "1.0"

defmt = { version = "1.0", optional = true }
defmt-rtt = { version = "1.1", optional = true }

[features]
default = []
defmt = ["dep:defmt", "dep:defmt-rtt", "tinyboot-ch32/defmt"]

[profile.dev]
opt-level = "z"
lto = true
codegen-units = 1
debug = 2
debug-assertions = false
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
