[package]
name = "app"
version = "0.2.0"
edition = "2024"

[dependencies]
tinyboot-ch32-app = { path = "../../../../tinyboot-ch32-app", features = ["ch32v003f4p6", "system-flash", "defmt"] }

embedded-io = "0.7"
critical-section = "1"
ch32-hal = { git = "https://github.com/ch32-rs/ch32-hal", features = ["ch32v003f4p6", "rt", "memory-x"] }
qingke-rt = { version = "0.6", features = ["v2"] }
defmt = "1.0"
defmt-rtt = "1.1"
