[package]
name = "app"
version = "3.2.1"
edition.workspace = true

[dependencies]
tinyboot-ch32-app = { path = "../../../../ch32/app", default-features = false }
embedded-io = "0.7"
critical-section = "1"
ch32-hal = { git = "https://github.com/ch32-rs/ch32-hal", default-features = false }
qingke-rt = { version = "0.6", features = ["v2"] }
defmt = "1.0"
defmt-rtt = "1.1"

[features]
default = ["ch32v003f4p6", "system-flash"]
system-flash = ["tinyboot-ch32-app/system-flash"]
user-flash = []
ch32v003f4p6 = ["tinyboot-ch32-app/ch32v003f4p6", "ch32-hal/ch32v003f4p6", "ch32-hal/rt"]
ch32v003a4m6 = ["tinyboot-ch32-app/ch32v003a4m6", "ch32-hal/ch32v003a4m6", "ch32-hal/rt"]
ch32v003f4u6 = ["tinyboot-ch32-app/ch32v003f4u6", "ch32-hal/ch32v003f4u6", "ch32-hal/rt"]
ch32v003j4m6 = ["tinyboot-ch32-app/ch32v003j4m6", "ch32-hal/ch32v003j4m6", "ch32-hal/rt"]
