[package]
name = "app"
version = "3.2.1"
edition.workspace = true

[dependencies]
tinyboot-ch32 = { path = "../../../../ch32", default-features = false }
embedded-io = "0.7"
critical-section = "1"
# See https://github.com/ch32-rs/ch32-hal/pull/169
ch32-hal = { git = "https://github.com/ch32-rs/ch32-hal", branch = "fix/v00x-48mhz", default-features = false }
qingke-rt = { version = "0.7", features = ["v2"] }
defmt = "1.0"
defmt-rtt = "1.1"

[features]
default = ["ch32v006x8x6", "system-flash"]
system-flash = ["tinyboot-ch32/system-flash"]
user-flash = []
standalone = []
ch32v006x8x6 = ["tinyboot-ch32/ch32v006x8x6", "ch32-hal/ch32v006f8p6", "ch32-hal/rt"]
